[feature] Add Filter component and update app structure
- Updated TypeScript paths in tsconfig.json to reflect new directory structure.
- Introduced Filter component for subject selection in Home screen.
- Added Header and LanguageToggle components for improved UI.
- Implemented global styles for consistent theming.
- Enhanced LanguageContext to support dynamic language switching.
- Updated mock data for teachers and added new dictionary entries for localization.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,12 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["components/*"],
-      "@screens/*": ["screens/*"],
-      "@mock/*": ["mock/*"],
-      "@dictionaries/*": ["dictionaries/*"],
-      "@contexts/*": ["contexts/*"],
+      "@components/*": ["app/components/*"],
+      "@screens/*": ["app/screens/*"],
+      "@mock/*": ["app/mock/*"],
+      "@dictionaries/*": ["app/dictionaries/*"],
+      "@contexts/*": ["app/contexts/*"],
+      "@utils/*": ["app/utils/*"],
       "@app/*": ["app/*"]
     }
   }
